--- a/main.html
+++ b/main.html
@@ -6,33 +6,41 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Document</title>
         <script>
+            function LinksSetColor(color){
+                var alist = document.querySelectorAll('a');
+                var i  = 0;
+                while(i < alist.length){
+                    console.log(alist[i]);
+                    alist[i].style.color = color;
+                    i++;
+                }
+            }
+            var body = {
+                setColor: function(color){
+                    document.querySelector('body').style.color = color;
+                }
+                BodySetBackgroundColor: function(color){
+                    document.querySelector('body').style.backgroundColor= color;
+                }
+
+            }
+
+
             function nightDayHandler(self){
                 var target = document.querySelector('body');
                 if(self.value === 'Night'){
-                target.style.backgroundColor= 'black';
-                target.style.color= 'white';
+                BodySetBackgroundColor('black');
+                BodySetColor('white');
                 self.value = 'Day'
 
-                var alist = document.querySelectorAll('a');
-                var i  = 0;
-                while(i < alist.length){
-                    console.log(alist[i]);
-                    alist[i].style.color = 'powderblue';
-                    i++;
-                }
+                LinksSetColor('powderblue');
 
             } else {
-                target.style.backgroundColor= 'white';
-                target.style.color= 'black';
+                BodySetBackgroundColor('white');
+                BodySetColor('black');
                 self.value = 'Night'
 
-                var alist = document.querySelectorAll('a');
-                var i  = 0;
-                while(i < alist.length){
-                    console.log(alist[i]);
-                    alist[i].style.color = 'blue';
-                    i++;
-                }
+                LinksSetColor('blue');
             }
         }
         </script>
